Chat #86. Initial Image Chooser in WebView. Needs Modifications

--- a/InsecurePayAndroid/app/src/main/assets/LiveChat.html
+++ b/InsecurePayAndroid/app/src/main/assets/LiveChat.html
@@ -22,7 +22,7 @@ function showAlert(){
   </textarea>
     <br>
     <input type="submit" name=“submit” value="Submit" onClick=“clearTextArea(); showAlert();”/>
-    <button type="file" name=“nut” value=“attach”/>
+    File to upload: <input type="file" name="uploadfile">
     </button>
 
 </form>
