--- a/InsecurePayAndroid/app/src/main/assets/LiveChat.html
+++ b/InsecurePayAndroid/app/src/main/assets/LiveChat.html
@@ -12,7 +12,7 @@ function showAlert(){
  alert(“Your message was sent!”);
 }
 
-function showAndroidDialog(dialogMsg) {
+function showDialog(dialogMsg) {
         Android.showDialog(dialogMsg);
     }
 </script>
@@ -24,7 +24,7 @@ function showAndroidDialog(dialogMsg) {
 
   </textarea>
     <br>
-    <input type="submit" name=“submit” value="Submit" onClick=“showAndroidDialog('thank')”/>
+    <input type="submit" name=“submit” value="Submit" onClick=“showDialog('thank')”/>
     File to upload: <input type="file" name="uploadfile">
     </button>
 
