--- a/InsecurePayAndroid/app/src/main/assets/LiveChat.html
+++ b/InsecurePayAndroid/app/src/main/assets/LiveChat.html
@@ -3,16 +3,17 @@
 <button>
 
 <p>Please enter your message:</p>
-<textarea id="text" style="width:400px; height:100px;" >
+<textarea id="text" style="width:250px; height:100px;" >
 
 
 </textarea>
+<br>
+File to upload: <input type="file" name="uploadfile"></button>
+<button type="reset" value="reset" onclick="myFunction('Thank you for your message')">Submit</button>
 
-<button type="submit" value="submit" onclick="myFunction('Thank you for your message')">Submit</button>
-<br>File to upload: <input type="file" name="uploadfile"></button>
 <script>
 function myFunction(dialogMsg) {
-
+    document.getElementById("text").value = "";
     Android.showDialog(dialogMsg);
 }
 function clearTextArea(submit) {
