Web View part is tested but the onView() is not able to detect the Dialog.  Interest calc and chat testing #103

--- a/InsecurePayAndroid/app/src/main/assets/LiveChat.html
+++ b/InsecurePayAndroid/app/src/main/assets/LiveChat.html
@@ -9,7 +9,7 @@
 </textarea>
 <br>
     File to upload: <input type="file" name="uploadfile"></button>
-<button type="reset" value="reset" onclick="myFunction('Thank you for your message')">Submit</button>
+<button id="sendButton" type="reset" value="reset" onclick="myFunction('Thank you for your message')">Submit</button>
 
 <script>
 function myFunction(dialogMsg) {
